Fix image stretch issue for partners

--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1212,3 +1212,8 @@ input[type=number] {
   max-height: 280px;
   overflow-y: auto;
 }
+
+.partner-logo {
+  height: 150px;
+  width: 150px;
+}
